--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
 	font-family: 'Playfair Display', serif;
 }
 
+.sticky {
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
 .main-nav {
 	display: flex;
 	background-color: #FF0A0A;
@@ -56,14 +61,23 @@ a {
 }
 
 .box {
-	
 	background-color: #FF0A0A;
 	padding: 10px;
 	margin: 20px;
 	text-align: center;
 	font-size: 40px;
-
 }
+
+.box:hover {
+	
+	transform: rotate(-7deg);
+	background-color: #0D4CDD;
+	padding: 20px;
+	margin: 30px;
+	text-align: center;
+	font-size: 40px;
+}
+
 footer {
 	clear: both;
 	padding: 100px;
