--- a/style.css
+++ b/style.css
@@ -1,90 +1,57 @@
-
+/*Jai Bhole Nath*/
 body {
 	margin: auto 0;
-	font-family: 'Playfair Display', serif;
 }
 
-.sticky {
+.main-nav {
 	position: fixed;
 	top: 0;
 	width: 100%;
-}
-.main-nav {
 	display: flex;
 	background-color: #FF0A0A;
 	list-style: none;
-	font-size: 1.5em;
 	margin: 0;
-}
-@media only screen and (max-width: 800px) {
-	.main-nav {
-		font-size: 1em;
-		padding: 0px;
-	}
+	font-family: sans-serif georgia;
+	font-size: 5em;
+	text-align: center;
+	box-shadow: 4px 4px 5px #455555;
 }
 
-li {
-	padding: 20px;
+.container	{
+	margin-top: 100px;
 }
-a {
-	color: #f6f6f6;
-	text-decoration: none;
-}
-.push {
-	margin-left: auto;
-}
-
-
-.image > img {
-	width: 100%;
-	height: 100%;
-	
-}
-
-.image {
-	display: flex;
-	align-items: start;
-	justify-content: center;
-	height: 40vh;
-	margin-top: 50px; 
-	margin-bottom: 30px; 
-}
-
-.grid-wrapper{
-	display: grid;
-	grid-gap: 20px;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-}
-
-
-.box > img {
-	width: 100%;
-	height: 100%;
+img {
+	width: 300px;
+	height: 200px;
 }
 
 .box {
-	background-color: #FF0A0A;
-	padding: 10px;
-	margin: 20px;
-	text-align: center;
-	font-size: 40px;
+	font-size: 30px;
+	border: 3px solid black;
+	padding: 2px;
+	display: flex;
+	direction: start;
+	align-items: center;
+	justify-content: space-between;
+
 }
 
-.box:hover {
-	
-	transform: rotate(-7deg);
-	background-color: #0D4CDD;
-	padding: 20px;
-	margin: 30px;
-	text-align: center;
-	font-size: 40px;
+.bottom {
+	font-size: 20px;
+	margin: 5px;
+	padding: 5px;  
+}
+
+a {
+	color: #FF0A0A;
+	text-decoration: underline;
 }
 
 footer {
-	clear: both;
+	
 	padding: 100px;
 	color: #FF0A0A;
-	font-size: 25px;
+	font-size: 15px;
 	text-align: center;
 	text-decoration: underline;
 }	
